Update Day2 study

--- a/1일차/파이썬.md
+++ b/1일차/파이썬.md
@@ -132,7 +132,7 @@ message('python study', 5)
 
 5) 가변 매개변수가 있는 함수
 
-* 가변 매개변수는 1개만 선언 가능하고, 일반매개변수와 함께 선언시 항상 일반 매개변수 뒤에 선언
+* 가변 매개변수는 1개만 선언 가능하고, 일반매개변수와 함께 선언시 일반 매개변수 뒤에 선언
 
 ```python
 def dynamic_message(*msg):
@@ -147,4 +147,17 @@ def dynamic_message(msg1, *msg):
     for i in msg:
         print(i)
 ```
+
+* 가변매개변수를 앞에 설정 시
+
+```python
+def dynamic_message3(*msg, n): 
+    for i in msg:
+        print(i)
+
+dynamic_message3('하나', '둘', n=5)
+```
+
+* 반드시 일반 매개변수를 정확하게 설정해주어야함
+* 또는 def dynamic_message3(*msg, n=10) 으로 기본값을 설정해도 됨(키워드매개변수)
 
