Update day3 study file

--- a/2일차/2일차 강의내용.md
+++ b/2일차/2일차 강의내용.md
@@ -268,3 +268,34 @@ file2.write("\nCreate new Line")
 file2.close()
 ```
 
+* 파일을 한라인씩 읽어 리스트에 저장
+
+```python
+# 파일 한라인씩 읽어서 리스트에 저장
+
+file_list = list() # file_list = []
+file3 = open("moduletest.py", "r", encoding="utf-8")
+for line in file3:
+    file_list.append(line)
+file3.close()
+'''
+linenum = 1
+for line in file_list:
+    print(linenum,"번 라인", line)
+    linenum = linenum+1
+'''
+# 위와 동일한 방법
+for index in range(0, len(file_list), 1):
+    print(index+1, "번 라인", file_list[index], end="")
+    
+    
+    
+# 라인번호가 있는 상태의 모든 내용을 파일 copy.txt에 저장
+file4 = open("copy.txt", "w")
+
+for index in range(0, len(file_list), 1):
+    line = str(index+1)+"번 라인 :"+ file4[index]
+    file4.write(line)
+f4.close()
+```
+
